# cook_system

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: broker.py  config.py  main.py  models.py  schemas.py  tasks.py
backend/utils/: dashscope_client.py  video.py
deploy/nginx/: cook-system.conf
deploy/systemd/: cook-system-api.service  cook-system-worker.service
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  index.css  main.ts
frontend/src/components/: Sidebar.vue  TopBar.vue
frontend/src/views/: Dashboard.vue  Library.vue  Login.vue  RecipeDetail.vue  Settings.vue
scripts/: start.sh
